# stocksai

./: Dockerfile  README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: build-push-image.yml  check-version-bump.yml  python-package.yml  tag-version.yml
src/stocksai/: __init__.py  ta.py
src/stocksai/ai/: inference.py  model.py  train.py  utils.py
src/stocksai/core/: calcs.py
src/stocksai/ui/: main.py  ui.json
tests/core/: test_calcs.py
